Changed threadId() to getId() for Java 17 compatibility